# applied-python-training

./: .gitignore  Makefile  pyproject.toml
.github/workflows/: deploy-docs.yaml
_build/.jupyter_cache/: global.db
_build/html/: .buildinfo  genindex.html  intro.html  markdown-notebooks.html  markdown.html  notebooks.html  objects.inv  prerequisites.html  search.html  searchindex.js
_build/jupyter_execute/: markdown-notebooks.ipynb
code/: README.md  back_propagation.py  hello_world.ipynb  helpers.py  inheritance.py  mixins.py  module_example.py
data/: creating_file_example.txt  csv_example.csv  music.csv  music_with_na.csv  reading_file_example.txt  writing_file_example.txt
docs/: _config.yml  _toc.yml  conf.py  intro.md
docs/data_preprocessing/: image_preprocessing.ipynb  image_preprocessing_2.ipynb  number_preprocessing.ipynb  numerical_data_preprocessing.md  text_preprocessing.ipynb
docs/data_science/: ds_lifecycle.md  eda.ipynb  intro_to_data_science.md
docs/data_visualization/: visualizing_distribution.md  visualizing_distributions.ipynb  visualizing_proportions.ipynb  visualizing_proportions.md  visualizing_quantities.ipynb  visualizing_quantities.md  visualizing_relationships.ipynb  visualizing_relationships.md
docs/deep_learning/: .gitignore  computer_vision_example.ipynb  intro_to_deep_learning.md  keras_tuner.ipynb
docs/deployment/: deploy_ml_apps.md  deploy_python_apps.md  intro_to_deployment.md
docs/gen_ai/: intro_to_gen_ai.md  intro_to_llm.md  local_llms.md
docs/getting_started/: setup_git.md  setup_python.md  setup_wsl.md
docs/llm/: intro_to_llm.md
docs/machine_learning/: intro_to_machine_learning.md
docs/matplotlib/: intro_to_matplotlib.ipynb
docs/numpy/: intro_to_numpy.md  numpy_exercises.ipynb  numpy_fundamentals.md  numpy_quickstart.md  visual_intro_to_numpy.ipynb
docs/pandas/: intro_to_pandas.md  pandas_exercises.ipynb  visual_intro_to_pandas.ipynb
docs/python_fundamentals/: python_fundamentals.md
docs/reference/: ai_domains.md
notebooks/: README.md  hello_world.ipynb
(+99 files in other folders)
