[tool.poetry]
name = "applied-python-training"
version = "0.1.0"
description = ""
authors = ["Arief Rahmansyah <ariefrahmansyah@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter-book = "^1.0.2"
sphinx-autobuild = "^2024.4.16"
jupyterlab = "^4.2.4"
black = "^24.4.2"
isort = "^5.13.2"
jupyterlab-code-formatter = "^3.0.0"
matplotlib = "^3.9.1"
tensorflow = "^2.17.0"
pandas = "^2.2.2"
seaborn = "^0.13.2"
pywaffle = "^1.1.1"
nlp-rake = "^0.0.2"
wordcloud = "^1.9.3"
nltk = "^3.9.1"
pysastrawi = "^1.2.0"
opencv-python = "^4.10.0.84"
scikit-learn = "^1.5.1"
scikit-image = "^0.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
