[tool.poetry]
name = "applied-python-training"
version = "0.1.0"
description = ""
authors = ["Arief Rahmansyah <ariefrahmansyah@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
jupyter-book = "^1.0.2"
jupyterlab = "^4.2.4"
jupyterlab-code-formatter = "^3.0.0"
matplotlib = "^3.9.1"
nlp-rake = "^0.0.2"
nltk = "^3.9.1"
opencv-python = "^4.10.0.84"
pandas = "^2.2.2"
pysastrawi = "^1.2.0"
python = "^3.12"
pywaffle = "^1.1.1"
scikit-image = "^0.24.0"
scikit-learn = "^1.5.1"
seaborn = "^0.13.2"
sphinx-autobuild = "^2024.4.16"
tensorboard = "^2.17.1"
tensorflow = "^2.17.0"
wordcloud = "^1.9.3"
keras-tuner = "^1.4.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
